# ghs

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  stars  stars.py
.github/workflows/: release.yml
src/: cli.py  database.py  embeddings.py  github_client.py  readme_parser.py
