[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-stars-search"
version = "0.1.0"
description = "A command-line tool to semantically search your starred GitHub repositories"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Nicolás Iglesias", email = "nfiglesias@gmail.com"}
]
keywords = ["github", "stars", "search", "semantic", "embeddings", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyGithub>=2.1.1",
    "requests>=2.31.0",
    "pysqlite3-binary>=0.5.0",
    "sqlite-vec>=0.1.1",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.0.0"]

[project.scripts]
ghs = "src.cli:main"

[project.urls]
Homepage = "https://github.com/webpolis/ghs"
Repository = "https://github.com/webpolis/ghs"
Issues = "https://github.com/webpolis/ghs/issues"

[tool.setuptools]
packages = ["src"]
